[package]
authors = ["Curtis McEnroe <programble@gmail.com>"]
name = "fresh"
version = "0.0.0"

[[bin]]
name = "fresh-cli"
path = "src/bin/fresh-cli/main.rs"

[dependencies]
clap = "2.0.5"
hyper = "0.7.0"
inth-oauth2 = "0.8.0"
rand = "0.3.12"
regex = "0.1.52"
rustc-serialize = "0.3.18"
scraper = "0.3.1"
url = "0.5.2"
xdg = "2.0.0"

# Byron/google-apis-rs#148
[dependencies.google-gmail1]
version = "0.1.12"
git = "https://github.com/programble/google-apis-rs"
branch = "pinned-serde"

# Byron/yup-oauth2#16
[dependencies.yup-oauth2]
version = "0.5.5"
git = "https://github.com/programble/yup-oauth2"
branch = "pinned-serde"
