[package]
authors = ["Curtis McEnroe <programble@gmail.com>"]
name = "fresh"
version = "0.0.0"

[[bin]]
name = "fresh-cli"
path = "src/bin/fresh-cli/main.rs"

[dependencies]
clap = "2.0.5"
google-gmail1 = "0.1.13"
hyper = "0.8.0"
inth-oauth2 = "0.9.0"
rand = "0.3.12"
regex = "0.1.52"
rustc-serialize = "0.3.18"
scraper = "0.3.1"
url = "0.5.2"
yup-oauth2 = "0.5.4"
xdg = "2.0.0"
